--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 /* Images created by: https://unsplash.com/@pawel_czerwinski */
 
+@import url('https://fonts.googleapis.com/css2?family=Spartan:wght@400;700&display=swap');
+
 html {
   box-sizing: border-box;
 }
@@ -11,19 +13,33 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-
+  font-family: Spartan, sans-serif;
   font-size: 12px;
 }
 
-
+.player-container {
+  height: 500px;
+  width: 400px;
+  background: #e7e7e7;
+  border-radius: 8px;
+  box-shadow: 0 15px 30px 5px rgb(0 0 0 / 30%);
+}
 
 .img-container {
-
+  height: 300px;
+  width: 300px;
   position: relative;
   top: -50px;
   left: 50px;
 }
 
+.img-container img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 8px;
+  box-shadow: 0 5px 30px 5px rgb(0 0 0 / 50%);
+}
 
 h2 {
   font-size: 25px;
@@ -79,8 +95,6 @@ h3 {
 
 }
 
-
-
 .main-button {
   font-size: 40px;
   position: relative;
@@ -89,7 +103,9 @@ h3 {
 
 /* Media Query: iPhone (Vertical) */
 @media screen and (max-width: 376px) {
-
+  .player-container {
+    width: 95vw;
+  }
 
   .img-container {
     left: 29px;
